src/test/ui/const-generics/fn-const-param-call.min.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-call.rs:12:25
   |
LL | struct Wrapper<const F: fn() -> u32>;
   |                         ^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-call.rs:14:15
   |
LL | impl<const F: fn() -> u32> Wrapper<F> {
   |               ^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to 2 previous errors

